# Ethereal

./: Cargo.toml  README.md  docs.md  main.etrl  makefile
.github/workflows/: build.yml  devskim.yml  lint.yml
examples/: array.etrl  input.etrl  math.etrl
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
src/ast/: mod.rs  token.rs
src/evaluation/: globals.rs  lib.rs  library.rs  mod.rs  object.rs  store.rs
src/std_lib/: array.rs  fs.rs  mod.rs  util.rs
src/std_library/: array.rs  fs.rs  hash.rs  http.rs  json.rs  math.rs  mod.rs  string.rs  util.rs
src/wasm/: main.rs
std/: array.etrl
web/: README.md  package-lock.json  package.json  tailwind.config.js
web/pages/: _app.tsx  index.tsx
