[package]
name = "ethereal_lang"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
wasm-bindgen = "0.2.79"
vfs = "0.6.2"
rusty_express = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.79"
rust-crypto = "0.2.36"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ethereal"
path = "src/bin/main.rs"

[[bin]]
name = "wasm"
path = "src/wasm/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
